--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 version=5.2.23.BUILD-SNAPSHOT
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
