spring-demo，生成src目录

--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -19,6 +19,15 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
+task "create-dirs"  {
+    sourceSets*.java.srcDirs*.each {
+        it.mkdirs()
+    }
+    sourceSets*.resources.srcDirs*.each{
+        it.mkdirs()
+    }
+}
+
 test {
     useJUnitPlatform()
 }
