--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -10,11 +10,15 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.projectlombok:lombok:1.18.18'
+    implementation 'junit:junit:4.8.2'
+    implementation 'junit:junit:4.8.2'
+    testCompile group: 'junit', name: 'junit', version: '4.8.2'
     compile(project(":spring-beans"))
     compile(project(":spring-context"))
     compile(project(":spring-core"))
     compile(project(":spring-expression"))
+    compile(project(":spring-instrument"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
@@ -31,3 +35,11 @@ task "create-dirs"  {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "utf-8"
+}
+tasks.withType(Javadoc) {
+    options.encoding = "utf-8"
+}
+
