--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -12,11 +12,14 @@ repositories {
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'junit:junit:4.8.2'
-    implementation 'junit:junit:4.8.2'
     testCompile group: 'junit', name: 'junit', version: '4.8.2'
     compile(project(":spring-beans"))
     compile(project(":spring-context"))
     compile(project(":spring-core"))
+    compile(project(":spring-aspects"))
+    compile(project(":spring-context"))
+    compile(project(":spring-aop"))
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
     compile(project(":spring-expression"))
     compile(project(":spring-instrument"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
